# perf_regions

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README  README.md  TODO  build.sh  config.mk  configure  install.sh  run_tests.sh  test_build.sh
cmake/: perf_regionsConfig.cmake.in
cmake/modules/: FindPAPI.cmake
doc/: CHANGELOG.md  install.md  overview.lyx  overview.lyx~  perf_regions_overview.lyx  perf_regions_overview.md
doc/papi_info/mo/: PAPI_component_avail.o2688560  PAPI_native_avail.o2671453
example_usage/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  Makefile  Makefile.setup  run_all.sh
examples/array_test_c/: CMakeLists.txt  Makefile  array_test.c  perf_regions_instrumentation.py  run_array_test.sh  run_array_test_perf_region.sh  run_tests.sh
examples/array_test_f/: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  array_test.F90  perf_regions_fortran.F90  perf_regions_instrumentation.py  run_tests.sh  test.sh
examples/nemo_test_f/: .gitignore  CMakeLists.txt  Makefile  nemo_run_test.sh  nemo_run_valgrind_test.sh  nemo_test.F90  perf_region_list.txt  perf_regions_instrumentation.py  run_tests.sh
examples/nested_test_f/: .gitignore  CMakeLists.txt  Makefile  nested_test.F90  perf_region_list.txt  perf_regions_instrumentation.py  run_tests.sh  test.sh
examples/recursive_test_f/: Makefile  perf_regions_instrumentation.py  recursive_test.F90  test.sh
examples/stream_benchmark/: .gitignore  CMakeLists.txt  Makefile  perf_regions_instrumentation.py  run_tests.py  run_tests.sh  stream.c  stream_c_perfregion_run.py  stream_c_perfregion_run.sh  stream_c_perfregion_run_sde.py
scripts/: perf_regions.py
src/: CMakeLists.txt  Makefile  papi_counters.c  papi_counters.h  perf_region_defines.h  perf_region_names.c  perf_region_names.h  perf_regions.c  perf_regions.h  perf_regions_defines.h  perf_regions_fortran.F90  perf_regions_fortran.mod  perf_regions_names.c  perf_regions_names.h  perf_regions_output.c  perf_regions_output.h  posix_clock.c  posix_clock.h
tests/: .gitignore  Makefile  Makefile.setup  README.md  array_run_test.sh  array_test.c  array_test.ods  nemo_run_test.sh  nemo_run_valgrind_test.sh  nemo_test.F90  pytest.ini  replace_test.py  requirements.txt  run_all.sh  run_all_test.py  run_build_and_pytests.sh  venv_setup.sh
tests/array_test_c/: Makefile  array_test.c_TEST_PR  perf_regions_instrumentation.py  pytests.py  run_tests.py  run_tests.sh
tests/array_test_c/src/: array_test.c
tests/array_test_c/test_data/: array_test.c_TEST_PR
tests/array_test_f/: Makefile  array_test.F90  array_test.F90_TEST_PR  perf_regions_instrumentation.py  pytests.py  run_tests.py  run_tests.sh
tests/array_test_f/test_data/: array_test.F90_TEST_PR
tests/bandwidth_monitor_papi/: Makefile  compile_and_run.sh  pytests.py  run.py
tests/bandwidth_monitor_papi/src/: bandwidth_monitor_papi.c
tests/nemo_test_f/: .gitignore  Makefile  nemo_test.F90_TEST_PR  perf_regions_instrumentation.py  run_tests.py  run_tests.sh  test_nemo_test_f.py
tests/nemo_test_f/test_data/: nemo_test.F90_TEST_ORIG
tests/nemo_test_f_direct/: Makefile  nemo_test.F90  run_tests.py  run_tests.sh  test_nemo_test_f_direct.py
tests/nemo_test_f_direct/src/: nemo_test.F90
tests/skip_test_c/: Makefile  pytests.py  run_tests.py  skip_test
tests/skip_test_c/src/: skip_test.c
tests/src_replace/: domngb.F90
tests/stream_benchmark/: .gitignore  Makefile  perf_regions_instrumentation.py  run_benchmark_fishbone_intel.py  run_benchmark_louvain.py  run_benchmark_orig.py  run_tests.py  run_tests_fishbone_intel.py  run_tests_louvain.py  stream.c  test_stream_benchmark.py
tests/stream_benchmark/src/: stream.c
